{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 491,
  "lineage": "20253948-e6f9-641b-4b65-46d4c4323bf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0218d08a1f9dac831",
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:instance/i-063537e227e20ec47",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063537e227e20ec47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tw-common",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0213e633363e0f290",
            "private_dns": "ip-10-10-0-15.ap-northeast-1.compute.internal",
            "private_ip": "10.10.0.15",
            "public_ip": "54.65.206.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07acbaa6f1cdbd2e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09612bbe923175b49",
            "tags": {
              "Cost": "cost-lx",
              "Name": "lx-ec2-1"
            },
            "tags_all": {
              "Cost": "cost-lx",
              "Name": "lx-ec2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038756b3dc3461c50",
              "sg-04cfea75d7e411d0f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-mine",
            "aws_security_group.sg-ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:internet-gateway/igw-0819b8efd5b83908a",
            "id": "igw-0819b8efd5b83908a",
            "owner_id": "665378081513",
            "tags": {
              "Cost": "cost-lx",
              "Name": "lx-igw"
            },
            "tags_all": {
              "Cost": "cost-lx",
              "Name": "lx-igw"
            },
            "vpc_id": "vpc-0b508db34c104fda0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:route-table/rtb-0b74a41133e85ca52",
            "id": "rtb-0b74a41133e85ca52",
            "owner_id": "665378081513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0819b8efd5b83908a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cost": "cost-lx",
              "Name": "lx-rtb"
            },
            "tags_all": {
              "Cost": "cost-lx",
              "Name": "lx-rtb"
            },
            "vpc_id": "vpc-0b508db34c104fda0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eab4e4b5354711b",
            "route_table_id": "rtb-0b74a41133e85ca52",
            "subnet_id": "subnet-09612bbe923175b49"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-mine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:security-group/sg-04cfea75d7e411d0f",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cfea75d7e411d0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-sample-lx-http",
            "name_prefix": "",
            "owner_id": "665378081513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "cost-lx",
              "Name": "lx-sg-http"
            },
            "tags_all": {
              "Cost": "cost-lx",
              "Name": "lx-sg-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b508db34c104fda0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:security-group/sg-038756b3dc3461c50",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038756b3dc3461c50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-sample-lx-ssh",
            "name_prefix": "",
            "owner_id": "665378081513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "cost-lx",
              "Name": "lx-sg-ssh"
            },
            "tags_all": {
              "Cost": "cost-lx",
              "Name": "lx-sg-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b508db34c104fda0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "same_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": -1,
            "id": "sgrule-1630136963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-038756b3dc3461c50",
            "self": false,
            "source_security_group_id": "sg-038756b3dc3461c50",
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ssh",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:subnet/subnet-09612bbe923175b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-09612bbe923175b49",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665378081513",
            "tags": {
              "Cost": "cost-lx",
              "Name": "lx-sbn-1a"
            },
            "tags_all": {
              "Cost": "cost-lx",
              "Name": "lx-sbn-1a"
            },
            "vpc_id": "vpc-0b508db34c104fda0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:vpc/vpc-0b508db34c104fda0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-087ac8507ffeb2ec6",
            "default_route_table_id": "rtb-0843947a2da9cb97f",
            "default_security_group_id": "sg-082e12cae94ec2f17",
            "dhcp_options_id": "dopt-0b888e729d0148858",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b508db34c104fda0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0843947a2da9cb97f",
            "owner_id": "665378081513",
            "tags": {
              "Cost": "cost-lx",
              "Name": "lx-vpc"
            },
            "tags_all": {
              "Cost": "cost-lx",
              "Name": "lx-vpc"
            }
          }
        }
      ]
    }
  ]
}